--- a/src/styles.scss
+++ b/src/styles.scss
@@ -168,3 +168,12 @@
     min-height: 10rem;
     display: block;
 }
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #BCBFC5;
+}
